<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Welcome!</string>
    <string name="app_name">LifeTreasure</string>

    <!-- public -->
    <string name="string_more">更多</string>

    <!-- pull to refresh -->
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>

    <!-- member -->
    <string name="test_str_store_name">三角烧（新街口店）</string>
    <string name="test_str_member_info">成为会员</string>
    <string name="test_str_member_count">已有300位会员</string>
    <string name="string_sort_default">默认排序</string>
    <string name="text_more">更多</string>

    <!-- search -->
    <string name="string_city_hefei">合肥</string>
    <string name="string_hint_search_business">查找你要的商户</string>
    <string name="string_active">会员卡活动</string>
    <string name="string_active_tip">优惠活动一起来参与！</string>
    <string name="string_nearby">附近</string>
    <string name="string_nearby_tip">附近优惠，轻松获取！</string>
    <string name="string_grid_separate_item_1">中餐</string>
    <string name="string_grid_separate_item_2">西餐</string>
    <string name="string_grid_separate_item_3">咖啡馆</string>
    <string name="string_grid_separate_item_4">会所茶楼</string>
    <string name="string_grid_separate_item_5">影剧院</string>
    <string name="string_grid_separate_item_6">KTV</string>
    <string name="string_grid_separate_item_7">酒店宾馆</string>
    <string name="string_grid_separate_item_8">购物</string>
    <string name="string_grid_business_item_1">步行街</string>
    <string name="string_grid_business_item_2">三孝口</string>
    <string name="string_grid_business_item_3">国购广场</string>
    <string name="string_grid_business_item_4">宁国路</string>
    <string name="string_grid_business_item_5">万达商圈</string>
    <string name="string_grid_business_item_6">南七</string>
    <string name="string_grid_business_item_7">胜利路</string>
    <string name="string_grid_business_item_8">明珠广场</string>

    <!-- mycenter -->
    <string name="string_edit_username_hint">请输入您的生活宝/合论账号</string>
    <string name="string_edit_password_hint">请输入您的密码</string>
    <string name="string_check_login_show_password">显示密码</string>
    <string name="string_check_login_remember_password">记住密码</string>
    <string name="string_check_login_auto_login">自动登录</string>
    <string name="string_txt_center_mycard">我的会员卡</string>
    <string name="string_txt_center_myfav">我的收藏</string>
    <string name="string_txt_center_mycomment">我的点评</string>

    <!-- more -->
    <string name="string_more_item1">图片展示</string>
    <string name="string_more_item2">推送设置</string>
    <string name="string_more_item3">清除缓存</string>
    <string name="string_more_item4">使用帮助</string>
    <string name="string_more_item5">软件更新</string>
    <string name="string_more_item6">关于</string>
    <string name="string_more_item7">意见反馈</string>
    <string name="string_more_item8"></string>
    <string name="string_more_item9"></string>
    <string name="string_more_item10"></string>

</resources>