<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_more_title_bar"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_more"
            android:textColor="@color/color_more_title_word"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- advert -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_search_advert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <!-- separate & business -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/btn_search_separate"
                            android:layout_width="fill_parent"
                            android:layout_height="42.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_search_separate_selected"
                            android:button="@null"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/btn_search_business"
                            android:layout_width="fill_parent"
                            android:layout_height="42.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_search_business_normal"
                            android:button="@null" />
                    </RadioGroup>
                </LinearLayout>
            </RelativeLayout>

            <!-- gridview -->

            <RelativeLayout
                android:id="@+id/rel_btn_more_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical" >

                <GridView
                    android:id="@+id/grid_search_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="0.0dip"
                    android:listSelector="@null"
                    android:numColumns="3"
                    android:verticalSpacing="0.0dip" />
            </RelativeLayout>

            <!-- nearby -->

            <LinearLayout
                android:id="@+id/linear_search_nearby"
                style="@style/layout_match_wrap"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="3.0dip"
                android:layout_marginRight="3.0dip"
                android:layout_marginTop="7.0dip"
                android:background="@drawable/bg_search_btn_bar"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingBottom="5.0dip"
                android:paddingLeft="23.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/index_item_title"
                    android:text="@string/string_nearby" />

                <TextView
                    style="@style/index_item_title_tip"
                    android:text="@string/string_nearby_tip" />
            </LinearLayout>
            <!-- active -->

            <LinearLayout
                android:id="@+id/linear_search_active"
                style="@style/layout_match_wrap"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="3.0dip"
                android:layout_marginRight="3.0dip"
                android:layout_marginTop="7.0dip"
                android:background="@drawable/bg_search_btn_bar"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingBottom="5.0dip"
                android:paddingLeft="23.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/index_item_title"
                    android:text="@string/string_active" />

                <TextView
                    style="@style/index_item_title_tip"
                    android:text="@string/string_active_tip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>