<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg_member_card"
    android:orientation="vertical"
    android:paddingBottom="5.0dip"
    android:paddingLeft="3.0dip"
    android:paddingRight="5.0dip"
    android:paddingTop="5.0dip" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:id="@+id/card_pic_fr"
            android:layout_width="112.0dip"
            android:layout_height="85.0dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="3.0dip" >

            <ImageView
                android:id="@+id/img_comment_card_pic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:scaleType="fitXY"
                android:src="@drawable/bg_member_card_cover" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/card_pic_fr"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip" >

                <ImageView
                    android:id="@+id/img_is_union_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5.0dip"
                    android:scaleType="center"
                    android:src="@drawable/icon_km_vip" />

                <TextView
                    android:id="@+id/txt_comment_shop_name"
                    style="@style/font16_black"
                    android:layout_width="140.0dip"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/img_is_union_member"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="5.0dip"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:singleLine="true"
                    android:text="@string/test_str_store_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip" >

                <TextView
                    android:id="@+id/txt_comment_card_abstract"
                    style="@style/font14_gray"
                    android:layout_width="160.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15.0dip"
                    android:ellipsize="end"
                    android:lines="2"
                    android:text="@string/test_str_member_info" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_arrow_right" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_comment_card_num"
                style="@style/font12_gray_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="5.0dip"
                android:text="@string/test_str_member_count" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>