<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_more_title_bar"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_more"
            android:textColor="@color/color_more_title_word"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_more_up"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_cache"
                    android:padding="8dp"
                    android:text="@string/string_more_item1"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/img_btn_more_piccache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/icon_more_has_pic"
                    android:clickable="true"
                    android:scaleType="matrix" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_line"
                android:clickable="true"
                android:gravity="center_vertical" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_middle"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_push" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_push"
                    android:padding="8dp"
                    android:text="@string/string_more_item2"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/img_btn_more_push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/icon_more_on"
                    android:scaleType="matrix" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_line"
                android:clickable="true"
                android:gravity="center_vertical" />

            <RelativeLayout
                android:id="@+id/rel_btn_more_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_down"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_clear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_clear"
                    android:padding="8dp"
                    android:text="@string/string_more_item3"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />
            </RelativeLayout>

            <!-- ******************************************************************** -->

            <RelativeLayout
                android:id="@+id/rel_btn_more_help"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_more_up"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_help"
                    android:padding="8dp"
                    android:text="@string/string_more_item4"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_line"
                android:clickable="true"
                android:gravity="center_vertical" />

            <RelativeLayout
                android:id="@+id/rel_btn_more_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_middle"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_update"
                    android:padding="8dp"
                    android:text="@string/string_more_item5"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_line"
                android:clickable="true"
                android:gravity="center_vertical" />

            <RelativeLayout
                android:id="@+id/rel_btn_more_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_middle"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_about"
                    android:padding="8dp"
                    android:text="@string/string_more_item6"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_line"
                android:clickable="true"
                android:gravity="center_vertical" />

            <RelativeLayout
                android:id="@+id/rel_btn_more_suggest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_more_down"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/img_more_suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_suggest" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_more_suggest"
                    android:padding="8dp"
                    android:text="@string/string_more_item7"
                    android:textColor="@color/color_more_item_word"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="matrix"
                    android:src="@drawable/icon_more_arrow" />
            </RelativeLayout>
            <!-- ******************************************************************** -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>